[tool.poetry]
name = "imageboard-poetry add"
version = "0.1.0"
description = "imageboard"
authors = ["Pitonych <pitonych8@gamil.com>"]
readme = "README.md"
packages = [{include = "imageboard_highload"}]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.11.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.15"}
pyjwt = "^2.7.0"
uvicorn = "^0.22.0"
fastapi = "^0.95.2"
celery = "^5.2.7"
gunicorn = "^20.1.0"
fastapi-event = "^0.1.3"
pythondi = "^1.2.4"
ujson = "^5.7.0"
click = "^8.1.3"
asyncpg = "^0.27.0"
greenlet = "^2.0.2"
redis = "^4.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
